--- a/AstroTalk/pom.xml
+++ b/AstroTalk/pom.xml
@@ -15,6 +15,10 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		
+    <start-class>com.example.JWTAuthenticationSpringboot.JwtAuthenticationSpringbootApplication</start-class>
+
+
 	</properties>
 	<dependencies>
 		<dependency>
